--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <title>Rocket League Price Calculator</title>
+	<link rel="icon" href="./icon.png" />
 </head>
 <body>
 <div id="main">
