--- a/index.html
+++ b/index.html
@@ -1,65 +1,69 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <script src="script.js"></script>
+
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <title>Rocket League Price Calculator</title>
-	<link rel="icon" href="./icon.png" />
+    <link rel="icon" href="./icon.png" />
 </head>
+
 <body>
-<div id="main">
-    <p class="header">Item Type</p>
-    <label for="itemType"></label>
-    <select id="itemType" class="input" onchange="update()">
-        <option>Antenna</option>
-        <option>Black Market Decal</option>
-        <option>Boost</option>
-        <option>Car</option>
-        <option>Decal</option>
-        <option>Goal Explosion</option>
-        <option>Topper</option>
-        <option>Trail</option>
-        <option>Wheel</option>
-    </select>
-    <label for="dropType"></label>
-    <select id="dropType" class="input" onclick="changeDropType(); update()">
-        <option>Standard Drop</option>
-        <option>Painted-only Drop</option>
-        <option>Premium Drop</option>
-    </select>
-    <p class="header">Base Item Value</p>
-    <label for="baseValue"></label>
-    <input id="baseValue" class="input" onchange="update()" max="100000" min="10" step="10" type="number" value="10">
-    <p class="header" id="unpaintedText">Unpainted Item Value</p>
-    <label for="unpaintedValue"></label>
-    <input id="unpaintedValue" class="input" onchange="update()" max="100000" min="0" step="10" type="number"
-           value="10">
-    <p id="blueprintText" class="header">Blueprint Redemption Cost</p>
-    <label for="blueprintPrice"></label>
-    <input id="blueprintPrice" class="input" onchange="update()" max="100000" min="0" step="10" type="number"
-           value="0">
-    <p class="header">Certification Type</p>
-    <label for="cerificationType"></label>
-    <select id="cerificationType" class="input" onchange="update()">
-        <option>None</option>
-        <option>Striker</option>
-        <option>Scorer</option>
-        <option>Victor</option>
-        <option>Goalkeeper</option>
-        <option>Sniper</option>
-        <option>Tactician</option>
-        <option>Sweeper</option>
-        <option>Playmaker</option>
-        <option>Guardian</option>
-        <option>Aviator</option>
-        <option>Acrobat</option>
-        <option>Turtle</option>
-        <option>Paragon</option>
-        <option>Show-off</option>
-        <option>Juggler</option>
-    </select>
-    <p id="value">Error</p>
-</div>
+    <div id="main">
+        <span class="header">Item Type</span>
+        <label for="itemType"></label>
+        <select id="itemType" class="input" onchange="update()">
+            <option>Antenna</option>
+            <option>Black Market Decal</option>
+            <option>Boost</option>
+            <option>Car</option>
+            <option>Decal</option>
+            <option>Goal Explosion</option>
+            <option>Topper</option>
+            <option>Trail</option>
+            <option>Wheel</option>
+        </select>
+        <label for="dropType"></label>
+        <select id="dropType" class="input" onchange="changeDropType(); update()">
+            <option>Standard Drop</option>
+            <option>Painted-only Drop</option>
+            <option>Premium Drop</option>
+        </select>
+        <span class="header">Base Item Value</span>
+        <label for="baseValue"></label>
+        <input id="baseValue" class="input" onchange="update()" max="100000" min="10" step="10" type="number"
+            value="10">
+        <span class="header" id="unpaintedText">Unpainted Item Value</span>
+        <label for="unpaintedValue"></label>
+        <input id="unpaintedValue" class="input" onchange="update()" max="100000" min="0" step="10" type="number"
+            value="10">
+        <span id="blueprintText" class="header">Blueprint Redemption Cost</span>
+        <label for="blueprintPrice"></label>
+        <input id="blueprintPrice" class="input" onchange="update()" max="100000" min="0" step="10" type="number"
+            value="0">
+        <span class="header">Certification Type</span>
+        <label for="cerificationType"></label>
+        <select id="cerificationType" class="input" onchange="update()">
+            <option>None</option>
+            <option>Striker</option>
+            <option>Scorer</option>
+            <option>Victor</option>
+            <option>Goalkeeper</option>
+            <option>Sniper</option>
+            <option>Tactician</option>
+            <option>Sweeper</option>
+            <option>Playmaker</option>
+            <option>Guardian</option>
+            <option>Aviator</option>
+            <option>Acrobat</option>
+            <option>Turtle</option>
+            <option>Paragon</option>
+            <option>Show-off</option>
+            <option>Juggler</option>
+        </select>
+        <span id="itemValue">Error</span>
+    </div>
 </body>
+
 </html>
